--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <article>
             <div>
-                <img id="logo" src="/clon-google/assets/logo.png" alt="logo">
+                <img id="logo" src="assets/logo.png" alt="logo">
             </div>
 
             <div id="buscador">
