--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </svg>
                     </a></li>
                 <li><a href="http://" target="_blank" rel="noopener noreferrer">
-                    <img id="perfil" src="/clon-google/assets/perfil.jpg" alt=""></a></li>
+                    <img id="perfil" src="assets/perfil.jpg" alt=""></a></li>
             </ul>
         </nav>
     </header>
